# ztcf

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-bake.hcl
.github/workflows/: docker.yaml
src/: main.rs
