[package]
name = "ztcf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
cloudflare = "0.9.1"
dotenv = "0.13.0"
async-trait = "0.1.51"

[[bin]]
name = "ztcf"
path = "src/main.rs"
